--- a/Style/style.css
+++ b/Style/style.css
@@ -24,11 +24,23 @@ img {
 	padding: 0;
 	margin: 0;
 }
+video{
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
+}
+.parent{
+	overflow-x: hidden;
+
+	
+}
 .container {
 	padding-left: 15px;
 	padding-right: 15px;
 	margin-left: auto;
 	margin-right: auto;
+	position: relative;
+	height: 100vh;
 }
 /* Small */
 @media (min-width: 768px) {
@@ -49,3 +61,121 @@ img {
 	}
 }
 /* End Global Rule  */
+/* start main page style  */
+/* start nav  */
+nav{
+display: flex;
+justify-content: space-between;
+align-items: center;
+margin-top: 20px;
+position: relative;
+}
+nav::after{
+	content: "";
+	position: absolute;
+	height: 2px;
+width: 100%;
+	background-color: #ddd;
+	top: 150%;
+}
+nav .logo{
+	font-size: large;
+	font-weight: bold;
+}
+nav .links{
+	display: flex;
+	justify-content: space-around;
+}
+nav ul{
+	display: flex;
+	justify-content: space-around;
+	position: relative;
+	margin-right: 5px;
+	margin-top: 3px;
+	padding-right: 5px;
+	
+}
+nav ul::after{
+	content: "";
+	position: absolute;
+	height: 22px;
+	width: 2px;
+	background-color: #000;
+	top: 0;
+	right: 0;
+}
+nav ul li{
+	margin-left: 10px;
+	margin-right: 10px;
+position: relative;
+}
+nav ul li::after{
+	content: "";
+	position: absolute;
+	height: 2px;
+width:80px;
+	background-color: #ddd;
+	top: 35px;
+	left: 0px;
+	z-index: 1;
+}
+nav ul li:hover a{
+	color: #1787e0;
+}
+nav ul li:hover::after{
+	background-color: #1787e0;
+}
+nav ul li a{
+	text-decoration: none;
+	color: #000;
+}
+nav .links .contact-btn{
+	height: 25px;
+	width: 130px;
+	background-color: #1787e0;
+	border-radius: 9px;
+	border-style: none;
+	display: grid;
+	place-items: center;
+	transition: ease 0.7s;
+}
+nav .links .contact-btn:hover{
+	background-color: #000;
+
+}
+.contact-btn a{
+	color: #f5f5f5;
+	text-decoration: none;
+}
+/* end nav  */
+/* start video ann text  */
+.text-container{
+	position: absolute;
+	top: 40%;
+}
+.text-container h2{
+	font-size: 50px;
+}
+.text-container p{
+	width: 300px;
+	margin-top: 10px;
+	filter: blur(2px);
+}
+.video-bck{
+	z-index: -1;
+	position: absolute;
+	top: 0;
+	left: 0px;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+	
+}
+
+
+
+
+/* end video ann text  */
+
+/* end main page style  */
