--- a/Style/style.css
+++ b/Style/style.css
@@ -4,36 +4,44 @@
 	--main-color-alt: #1787e0;
 	--second-color: #ececec;
 }
+
 body {
 	font-family: "Cairo", sans-serif;
 	height: 600vh;
 }
+
 html {
 	scroll-behavior: smooth;
 }
+
 ul {
 	list-style: none;
 	padding: 0;
 	margin: 0;
 }
+
 img {
 	width: 100%;
 }
+
 * {
 	box-sizing: border-box;
 	padding: 0;
 	margin: 0;
 }
-video{
+
+video {
 	object-fit: cover;
 	width: 100%;
 	height: 100%;
 }
-.parent{
+
+.parent {
 	overflow-x: hidden;
 
-	
+
 }
+
 .container {
 	padding-left: 15px;
 	padding-right: 15px;
@@ -42,60 +50,69 @@ video{
 	position: relative;
 	height: 100vh;
 }
+
 /* Small */
-@media (min-width: 768px) {
+@media (max-width: 768px) {
 	.container {
 		width: 750px;
 	}
 }
+
 /* Medium */
 @media (min-width: 992px) {
 	.container {
 		width: 970px;
 	}
 }
+
 /* Large */
 @media (min-width: 1200px) {
 	.container {
 		width: 1170px;
 	}
 }
+
 /* End Global Rule  */
 /* start main page style  */
 /* start nav  */
-nav{
-display: flex;
-justify-content: space-between;
-align-items: center;
-margin-top: 20px;
-position: relative;
+nav {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 20px;
+	position: relative;
 }
-nav::after{
+
+nav::after {
 	content: "";
 	position: absolute;
 	height: 2px;
-width: 100%;
+	width: 100%;
 	background-color: #ddd;
 	top: 150%;
 }
-nav .logo{
+
+nav .logo {
 	font-size: large;
 	font-weight: bold;
 }
-nav .links{
+
+nav .links {
 	display: flex;
 	justify-content: space-around;
 }
-nav ul{
+
+nav ul {
 	display: flex;
 	justify-content: space-around;
 	position: relative;
 	margin-right: 5px;
 	margin-top: 3px;
 	padding-right: 5px;
-	
+
 }
-nav ul::after{
+
+nav ul::after {
 	content: "";
 	position: absolute;
 	height: 22px;
@@ -104,32 +121,38 @@ nav ul::after{
 	top: 0;
 	right: 0;
 }
-nav ul li{
+
+nav ul li {
 	margin-left: 10px;
 	margin-right: 10px;
-position: relative;
+	position: relative;
 }
-nav ul li::after{
+
+nav ul li::after {
 	content: "";
 	position: absolute;
 	height: 2px;
-width:80px;
+	width: 80px;
 	background-color: #ddd;
 	top: 35px;
 	left: 0px;
 	z-index: 1;
 }
-nav ul li:hover a{
+
+nav ul li:hover a {
 	color: #1787e0;
 }
-nav ul li:hover::after{
+
+nav ul li:hover::after {
 	background-color: #1787e0;
 }
-nav ul li a{
+
+nav ul li a {
 	text-decoration: none;
 	color: #000;
 }
-nav .links .contact-btn{
+
+nav .links .contact-btn {
 	height: 25px;
 	width: 130px;
 	background-color: #1787e0;
@@ -138,30 +161,51 @@ nav .links .contact-btn{
 	display: grid;
 	place-items: center;
 	transition: ease 0.7s;
+
 }
-nav .links .contact-btn:hover{
+
+nav .links .contact-btn:hover {
 	background-color: #000;
 
 }
-.contact-btn a{
+
+.contact-btn a {
 	color: #f5f5f5;
 	text-decoration: none;
 }
+@media(max-width:750px){
+	.links{
+		visibility: hidden;
+	}
+}
+
+
+
+
+
+
 /* end nav  */
 /* start video ann text  */
-.text-container{
+.text-container {
 	position: absolute;
 	top: 40%;
 }
-.text-container h2{
+
+.text-container h2 {
 	font-size: 50px;
 }
-.text-container p{
+
+.text-container p {
 	width: 300px;
 	margin-top: 10px;
+
+}
+
+.blur {
 	filter: blur(2px);
 }
-.video-bck{
+
+.video-bck {
 	z-index: -1;
 	position: absolute;
 	top: 0;
@@ -170,11 +214,43 @@ nav .links .contact-btn:hover{
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	
+
 }
+/* stert service  */
+.serv{
+	margin-top: 70px;
+}
+.service-head{
+	display: flex;
+	justify-content: center;
+	position: relative;
+}
+svg{
+	position: absolute;
+	top: -100%;
+	left: 58%;
+}
+.service-head h2{
+	font-size: 40px;
+	position: relative;
+}
+.service-head h2::after{
+	content: "";
+	position: absolute;
+	width: 100%;
+	height: 1px;
+	background-color: #1787e0;
+	top: 60px;
+left: 3px;}
 
 
 
+
+
+
+
+
+/* end service */
 
 /* end video ann text  */
 
