--- a/Style/style.css
+++ b/Style/style.css
@@ -81,8 +81,8 @@ video {
 }
 
 @media (max-width: 768px) {
-	.title + .corner {
-		transform: translate(60%, -20%);
+	.serv .title + .corner {
+		transform: translate(60%, 20%);
 	}
 }
 @media (max-width: 500px) {
@@ -253,9 +253,13 @@ nav .links .contact-btn:hover {
 }
 /* end main  */
 /* start servvice */
+.serv{
+	background-color: #ddd;
+}
 #service {
 	position: relative;
 	height: 143vh;
+	background-color: #ddd;
 }
 .service-text {
 	display: flex;
@@ -494,9 +498,146 @@ div.oo2:hover {
 /* end nav  */
 /* start video ann text  */
 
-/* stert service  */
+/* stert tech  */
+#technology{
+	background-color: #f5f5f5;
+	height: 193vh;
+	margin-top: -19px;
+	position: relative;
+}
+#technology::after{
+	content: "";
+	background-color: #ddd;
+	position: absolute;
+	bottom: -50px;
+	width: 1850px;
+	height: 300px;
+	left: -240px;
+	border-radius: 50%;
+	z-index: 0;
+	overflow-y: hidden;
+}
+#technology .title p{
+	width: 360px;
+}
+#technology .corner{
+	top: -12%;
+	right: 30%;
+}
+.content{
+	display: flex;
+	flex-direction: column;
+}
+.content >div{
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	
+	padding-left: 20px;
+}
+.content div .textarea{
+	width: 60%;
+	height: 150px;
+	position: relative;
+	padding-top: 30px;
+	padding-left: 30px;
+}
+.content div .textarea:hover{
+	background-color: #f5f5f5;
+}
+.content div .textarea::before{
+	content: "";
+	height: 60px;
+	position: absolute;
+	top: 64px;
+	left: 6px;
+	background-color:grey;
+	width: 2px;
+}
+.content div .buildings{
+	width: 20%;
+}
+.content div i{
+	position: absolute;
+	top: 32px;
+	left: 0px;
+}
+.content>div{
+	z-index: 1;
+}
+@media(max-width: 768px;){
+	#technology .corner{
+		top: -1%;
+	}
+	
+}
+@media(max-width:768px){
+	.content .first .textarea{
+	margin-bottom: 30px;
+	}
+	#technology::after{
+		left: -577px;
+	}
 
-/* end service */
+}
+@media(max-width:750px){
+	.serv .corner{
+		top: -45px;
+	}
+}
+
+@media(max-width:715px){
+	.content>div{
+		justify-content: start;
+	}
+	#technology .title{
+		padding-right: 140px;
+	}
+	#technology .corner{
+		left: 30%;
+	}
+}
+@media(max-width:620px){
+	.content>div{
+		max-width: 550px;
+	}
+	#technology .title{
+		padding-right: 260px;
+	}
+	#technology .corner{
+		left: 20%;
+	}
+	.content >div p{
+		font-size: 14px;
+	}
+}
+@media(max-width:500px){
+	#technology .title{
+		padding-right:0 ;
+	}
+	#technology .corner{
+		left: 70%;
+		top: -3%;
+	}
+	.content >div {justify-content: space-around;}
+	.content .first{
+		margin-bottom: 50px;
+	}
+	.content >div p{
+		font-size: 12px;
+	}
+	#technology .corner{
+		left: 63%;
+		top:0%
+	}
+}
+
+
+
+
+
+
+/* end tech */
 
 /* end video ann text  */
 
