--- a/Style/style.css
+++ b/Style/style.css
@@ -431,20 +431,14 @@ i.arrow {
 	/* transform: translateX(-400%); */
 }
 /* end main  */
-/* start service */
-.serv {
+/* start servvice */
+.serv{
 	background-color: #ddd;
 }
 #service {
 	position: relative;
 	height: 143vh;
 	background-color: #ddd;
-}
-@media (max-width: 500px) {
-	#service .title + .corner svg {
-		width: 70px;
-		transform: translate(70%, -10%);
-	}
 }
 .service-text {
 	display: flex;
@@ -472,6 +466,18 @@ i.arrow {
 	display: block;
 	top: 60px;
 	position: absolute;
+}
+.text-container p {
+	width: 300px;
+	padding: 20px;
+	margin-top: 10px;
+	border-radius: 10px;
+	color: white;
+}
+
+.text-container .text {
+	backdrop-filter: blur(5px) saturate(70%);
+	margin: 0 auto;
 }
 .cards {
 	display: grid;
@@ -657,9 +663,9 @@ div.oo2:hover {
 		margin-left: -40px;
 		margin: 0 auto;
 	}
-	.corner {
+	#technology .corner {
 		top: -0%;
-		left: 50%;
+		left: 14%;
 	}
 	.service-text h2::after {
 		top: 100px;
@@ -672,144 +678,573 @@ div.oo2:hover {
 /* start video ann text  */
 
 /* stert tech  */
-#technology {
+#technology{
 	background-color: #f5f5f5;
 	height: 193vh;
 	margin-top: -19px;
 	position: relative;
 }
-#technology::after {
+#technology::after{
 	content: "";
 	background-color: #ddd;
 	position: absolute;
 	bottom: -50px;
-	width: 100%;
+	width: 1850px;
 	height: 300px;
 	left: -240px;
 	border-radius: 50%;
 	z-index: 0;
-	/* overflow-y: hidden; */
+	overflow-y: hidden;
 }
-#technology .title p {
+#technology .title p{
 	width: 360px;
 }
-#technology .corner {
+#technology .corner{
 	top: -12%;
 	right: 30%;
 }
-.content {
+.content{
 	display: flex;
 	flex-direction: column;
 }
-.content > div {
+.content >div{
 	display: flex;
 	justify-content: space-around;
 	align-items: center;
-
+	
 	padding-left: 20px;
 }
-.content div .textarea {
+.content div .textarea{
 	width: 60%;
 	height: 150px;
 	position: relative;
 	padding-top: 30px;
 	padding-left: 30px;
 }
-.content div .textarea:hover {
+.content div .textarea:hover{
 	background-color: #f5f5f5;
 }
-.content div .textarea h3 {
-	padding-bottom: 10px;
-}
-.content div .textarea::before {
+.content div .textarea::before{
 	content: "";
 	height: 60px;
 	position: absolute;
 	top: 64px;
 	left: 6px;
-	background-color: grey;
+	background-color:grey;
 	width: 2px;
 }
-.content div .buildings {
+.content div .buildings{
 	width: 20%;
 }
-.content div i {
+.content div i{
 	position: absolute;
 	top: 32px;
 	left: 0px;
 }
-.content > div {
+.content>div{
 	z-index: 1;
 }
-/* @media (max-width: 768px;) {
-	#technology .corner {
+@media(max-width: 768px;){
+	#technology .corner{
 		top: -1%;
 	}
-} */
-@media (max-width: 768px) {
-	.content .first .textarea {
-		margin-bottom: 30px;
+	
+}
+@media(max-width:768px){
+	.content .first .textarea{
+	margin-bottom: 30px;
 	}
-	#technology::after {
+	#technology::after{
 		left: -577px;
 	}
+
 }
-@media (max-width: 750px) {
-	.serv .corner {
+@media(max-width:750px){
+	.serv .corner{
 		top: -45px;
 	}
 }
 
-@media (max-width: 715px) {
-	.content > div {
+@media(max-width:715px){
+	.content>div{
 		justify-content: start;
 	}
-	#technology .title {
+	#technology .title{
 		padding-right: 140px;
 	}
-	#technology .corner {
+	#technology+#tesimonials  .corner{
 		left: 30%;
 	}
 }
-@media (max-width: 620px) {
-	.content > div {
+@media(max-width:620px){
+	.content>div{
 		max-width: 550px;
 	}
-	#technology .title {
+	#technology .title{
 		padding-right: 260px;
 	}
-	#technology .corner {
+	#technology+#tesimonials  .corner{
 		left: 20%;
 	}
-	.content > div p {
+	.content >div p{
 		font-size: 14px;
 	}
 }
-@media (max-width: 500px) {
-	#technology .title {
-		padding-right: 0;
+@media(max-width:500px){
+	#technology .title{
+		padding-right:0 ;
 	}
-	#technology .corner {
+	#tesimonials .corner{
 		left: 70%;
 		top: -3%;
 	}
-	.content > div {
-		justify-content: space-around;
+	#technology .corner{
+		top: -3%;
+		right: -25%;
 	}
-	.content .first {
+	.content >div {justify-content: space-around;}
+	.content .first{
 		margin-bottom: 50px;
 	}
-	.content > div p {
+	.content >div p{
 		font-size: 12px;
 	}
-	#technology .corner {
-		left: 63%;
-		top: 0%;
+	#technology+#testimonials .corner{
+		left: 50%;
+		top:0%
+	}
+
+	#technology .title h2{
+		font-size: 40px;
 	}
 }
+/* start testimo */
+
+#testimonials .title h2::before {
+	background-color: #F39C12;
+}
+.white-span{
+	color: #f5f5f5;
+	margin-left: -3px;
+}
+#testimonials .corner{
+	top: -12%;
+	left: 56%;
+
+}
+#testimonials .title p{
+	width: 430px;
+position: relative;
+}
+#testimonials .title p::after{
+	content: "";
+	width: 100px;
+	height: 100px;
+	background-color: #F39C12;
+	border-radius: 50%;
+	color: #f5f5f5;
+	top: 0px;
+	right: -14px;
+	position: absolute;
+	z-index: -1;
+}
+.test-cards{
+
+	display: flex;
+	justify-content: space-around;
+}
+.test-cards>div{
+	width: 30%;
+	height: 180px;
+	background-color: #ddd;
+	position: relative;
+	display: flex;
+	align-items: start;
+	flex-direction: column;
+	padding-top: 10px;
+	padding-left: 10px;
+border-radius: 12px;
+}
+.test-cards .two2 .portfolio{
+	background-color: #ddd;
+    border-radius: 50%
+}
+.portfolio{
+	width:100px;
+	position: absolute;
+	top: -40px;
+	right: -10px;
+}
+.test-cards span{
+	opacity: 0.7;
+	margin-top: 8px;
+	margin-bottom: 8px;
+}
+.rate{
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	width: fit-content;
+	height: fit-content;
+	margin-bottom: 20px;
+}
+.rate i{
+	filter: invert(82%) sepia(46%) saturate(881%) hue-rotate(355deg) brightness(97%) contrast(108%);
+}
+@media(max-width:850px){
+	.test-cards .three3{
+		display: none;
+	}
+	.test-cards>div{
+		width: 40%;
+	}
+}
+@media(max-width:750px){
+	#testimonials .corner{
+	top: -14%;
+	left: 45%;
+	}
+.test-cards .two2{
+	display: none;
+}
+#testimonials .title{
+	/* margin-right: 25%; */
+	margin: 0 auto;
+}
+.test-cards{
+	margin-right: 25%;
+}
+.test-cards .one1{
+	width: 50%;
+
+}
+}
+@media(max-width:500px){
+	#testimonials .title{
+		margin-right: 0%;
+	}
+	.test-cards{
+		margin-right: 0%;
+	}
+	#testimonials .title p{
+		font-size: 15px;
+		/* left: -24px; */
+		margin: 0 auto;
+	}
+	#testimonials .title p::after{
+		width: 104px;
+	}
+	#testimonials .title h2{
+		font-size: 40px;
+	}
+	#testimonials .corner{
+		top: -3%;
+		left: 49%;
+	}
+	
+	.test-cards .one1{
+		width: 70%;
+		left: -18px;
+	}
+}
+
+/* end testimo */
+/* start pricing */
+#pricing{
+	background-color: #ddd;
+	z-index: -1;
+    position: relative;
+}
+#pricing::before{
+	content: "";
+	position: absolute;
+	height: 150px;
+	width: 150px;
+	border-radius: 50%;
+	top: 15%;
+	left: -8%;
+	background-color: #229c3d;
+}
+
+#pricing .corner{
+	top: -12%;
+	left: 47%;
+}
+ #pricing .title h2::before{
+	background-color: #229C3D;
+ }
+
+
+ #pricing .title p{
+	width: 330px;
+	text-align: center;
+	position: relative;
+ }
+ #pricing .title .diff::after{
+	content: "";
+	width: 100px;
+	height: 100px;
+	background-color:#229C3D ;
+	border-radius: 50%;
+	color: #f5f5f5;
+	top: 0px;
+	right: -20px;
+	position: absolute;
+	z-index: -1;
+ }
+ .subs{
+	width: 100%;
+	height: 63vh;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	flex-wrap: wrap;
+ }
+ .subs >div{
+	width: 280px;
+	height: 85%;
+	background-color: #f5f5f5;
+	padding: 20px;
+	border-radius: 13px;
+	transition: ease 0.7s;
+ }
+ .subs >div .plan{
+	display: flex;
+	height: 50%;
+	justify-content: space-between;
+ }
+
+ .subs >div .plan i{
+	font-size: 30px;
+ }
+ .subs >div:nth-child(2){
+	height: 100%;
+ }
+ .plan .text-p h3{
+	margin-top: 10px;
+	margin-bottom: 7px;
+	font-size: 30px;
+ }
+ .plan .text-p h5{
+	opacity: 0.7;
+ }
+ .advantages{
+	position: relative;
+ }
+ .advantages h5{
+	margin-left: 15px;
+	margin-bottom: 8px;
+ }
+ .advantages .gg{
+position: absolute;
+top: -1px;
+left: -5px;
+ }
+ .advantages .gk{
+	position: absolute;
+	top: 22px;
+	left: -5px;
+	 }
+	 .advantages .gh{
+		position: absolute;
+		top:45px;
+		left: -5px;
+		 }
+		 .pricing-btn{
+			width: 80%;
+			height: 30px;
+			border-radius: 8px;
+			bottom: -100px;
+			left: 10%;
+			position: absolute;
+			border-style: none;
+			background-color: #ddd;
+			transition: ease 0.7s;
+		 }
+		 .o2 .pricing-btn{
+			bottom: -107px;
+		 }
+		 .advantages .gr{
+			position: absolute;
+top: 68px;
+left: -5px;
+		 }
+		 .advantages .gp{
+			position: absolute;
+top: 94px;
+left: -5px;
+		 }
+	
+		.o3 .advantages .pricing-btn{
+			bottom: -50px;
+			 margin-top: 10px;
+			
+		}
+
+		.subs>div:hover{
+			background-color: #484848;
+			color: #f5f5f5;
+		}
+
+		.subs>div:hover .pricing-btn{
+			background-color: #229c3d;
+			color: #f5f5f5;
+		}
+		@media(max-width:900px){
+			.subs >div:nth-child(2){
+				margin-right: 10px;
+				margin-left: 10px;
+				height: 85%;
+			}
+			.o2 .pricing-btn{
+				bottom: -75px;
+			}
+			#pricing{
+				height: 175vh;
+			}
+			.subs>div:nth-child(3){
+				margin-top: 40px;
+			}
+			#pricing .container{
+				height: 100%;
+				width: 100%;
+			}
+			#pricing .corner {
+				top: -8%;}
+		}
+		@media(max-width:630px){
+.subs .o1{
+	margin-bottom: 40px;
+}
+#pricing {
+    height: 234vh;
+    margin-top: -175px;
+}
+#pricing .corner {
+    top: -6%;
+}
+		}
+		@media(max-width:503px){
+			#pricing .corner {
+				top: 0%;
+			}
+		}
+
+
+
+/* end pricing */
+/* start about */
+#about-us{
+	height: 100vh;
+	background-color: #f5f5f5;
+}
+#about-us .title h2::before{
+	background-color: #FF6F61;
+}
+.info{
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+height: 30vh;
+}
+.text-about{
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 45%;
+	position: relative;
+	line-height: 35px;
+	height: 100%;
+}
+.text-about::before{
+	content: "";
+	position: absolute;
+	background-color: #ddd;
+	width: 2px;
+	height: 100%;
+	top: 0%;
+	right: -35%;
+}
+.text-about p{
+	font-size: 19px;
+}
+
+
+.text-about span{
+	font-weight: bold;
+	text
+}
+
+.text-about button{
+	position: absolute;
+	width: 150px;
+	height: 32px;
+	border-style: none;
+	border-radius: 10px;
+	color:#f5f5f5;
+left: 0%;
+bottom: -6%;
+background-color: #FF6F61;
+}
+
+.boxes{
+	display: flex;
+	justify-content: space-around;
+	align-content: space-between;
+	width: 30%;
+	flex-wrap: wrap;
+}
+.boxes>div{
+	width: 110px;
+	height: 110px;
+	border-radius: 10px;
+border: 1px solid var(--border, rgba(181, 179, 179, 0.47));
+background: #FFFDFD;
+display: flex;
+flex-direction: column;
+align-items: center;
+justify-content: center;
+transition: ease 0.7s;
+}
+.boxes>div h5{
+	text-align: center;
+	margin-top: 10px;
+	opacity: 0.7;
+}
+.boxes>div:nth-child(4) h5{
+	width: 75px;
+}
+.boxes .box1+.box2{
+	margin-bottom: 20px;
+}
+.boxes>div:hover{
+	border-radius: 10px;
+background: #FFF;
+
+
+box-shadow: 10px 10px 26px -3px rgba(0, 0, 0, 0.25);
+}
+@media(max-width:900px){
+	#about-us .corner{
+		top: -20%;
+		left: 50%;
+		
+	}
+
+}
+
+
+/* end about */
+
+
+
+
+
 
 /* end tech */
 
 /* end video ann text  */
 
 /* end main page style  */
+
