--- a/Style/style.css
+++ b/Style/style.css
@@ -561,7 +561,8 @@ nav .links .contact-btn:hover {
 	width: 100%;
 	height: 100%;
 	object-fit: cover;
-	background-color: #4e4848;
+	background-image: url(/images/back.jpg);
+	background-size: cover;
 }
 .video-bck::after {
 	content: "";
